# r_log

./: .gitignore  CMakeLists.txt
cmake/: r_logConfig.cmake.in
include/r_log/: rlog.h
src/: main.cpp  rlog.cpp
